@@ -91,6 +91,9 @@
 
 			<div class="info">
 				<img class="avatar" />
+				<p class="props">
+					<img class="protected" src="img/props/protected.png" />
+				</p>
 
 				<p class="name"></p>
 				<p class="nick"></p>
